Materials and Publications ready (with broadcast record)

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -20,7 +20,7 @@ block vars
 		
 		var broadcast_info = "Наша трансляция проходит одновременно<br>на нескольких площадках, и вы можете выбрать наиболее удобную для Вас."
 		var broadcast_site = "Сайт конференции"
-		var broadcast_title = "Трансляция"
+		var broadcast_title = "Запись трансляции"
 		var broadcast_review = "Оценить спикеров"
 		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLScdv6PY9QpsafOz-atbsIqkr21OzdAi-SQ--2DdF6jao0Ad_A/viewform"
 		var broadcast_tg = "Задать вопрос в Telegram"
@@ -32,16 +32,19 @@ block vars
 		var r_tagiev = "Руслан Тагиев"
 		var r_tagiev_vocation = "генеральный директор Mediascope"
 		var r_tagiev_speech = "Приветственное слово"
+		var r_tagiev_video = broadcast_video_url
 
 		var k_achkasova = "Ксения Ачкасова"
 		var k_achkasova_vocation = "исполнительный директор Mediascope"
 		var k_achkasova_speech = "Итоги 2020.<br>Планы 2021"
 		var k_achkasova_details = "Развитие медиаизмерений, гибридные подходы и большие данные в исследованиях"
+		var k_achkasova_video = ""
 
 		var m_pikuleva = "Марина Пикулева"
 		var m_pikuleva_vocation = "директор по специальным исследованиям Mediascope"
 		var m_pikuleva_speech = "BrandPulse:<br>год спустя"
 		var m_pikuleva_details = "Новые возможности для анализа потребительских рынков"
+		var m_pikuleva_video = ""
 		var o_starostina = "Олеся Старостина"
 		var o_starostina_vocation = "руководитель проектов Mediascope"
 
@@ -49,11 +52,13 @@ block vars
 		var l_gleizer_vocation = "директор по информационным технологиям Mediascope"
 		var l_gleizer_speech = "Альпака и капибары"
 		var l_gleizer_details = "Как производство разнородных данных приходит к единой модели, а персонализация становится частью аналитики"
+		var l_gleizer_video = ""
 
 		var m_zotov = "Михаил Зотов"
 		var m_zotov_vocation = "коммерческий директор Mediascope"
 		var m_zotov_speech = "Главный вопрос…42!"
 		var m_zotov_details = "Как новые технологии Mediascope помогут медиа лучше изучить путь, внимание и действия человека"
+		var m_zotov_video = ""
 
 		var footer_contacts = "ОСТАВАЙТЕСЬ С НАМИ НА СВЯЗИ"
 		var footer_facebook = "Подпишись"
