--- a/src/pug/en/index.pug
+++ b/src/pug/en/index.pug
@@ -20,7 +20,7 @@ block vars
 		
 		var broadcast_info = "Our conference can be viewed on the website here and also on the Youtube channel. You can choose<br>the most convinient option."
 		var broadcast_site = "Conference website"
-		var broadcast_title = "Broadcast"
+		var broadcast_title = "Broadcast video"
 		var broadcast_review = "Please rate the speakers"
 		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLSdIx30Q5zMmWtQKHZG55eM1FhRRv0VdDPZkAljXSXpirXSd9A/viewform"
 		var broadcast_tg = "Ask a question in Telegram"
@@ -32,16 +32,19 @@ block vars
 		var r_tagiev = "Ruslan Tagiev"
 		var r_tagiev_vocation = "CEO Mediascope"
 		var r_tagiev_speech = "Welcome"
+		var r_tagiev_video = broadcast_video_url
 
 		var k_achkasova = "Ksenia Achkasova"
 		var k_achkasova_vocation = "COO Mediascope"
 		var k_achkasova_speech = "Results 2020.<br>Plans 2021"
 		var k_achkasova_details = "Media research development, hybrid approach and big data in research"
+		var k_achkasova_video = ""
 
 		var m_pikuleva = "Marina Pikuleva"
 		var m_pikuleva_vocation = "Custom Media Research Director Mediascope"
 		var m_pikuleva_speech = "BrandPulse:<br>one year later"
 		var m_pikuleva_details = "New opportunities for analyzing consumer markets"
+		var m_pikuleva_video = ""
 		var o_starostina = "Olesya Starostina"
 		var o_starostina_vocation = "Projects Lead Mediascope"
 
@@ -49,11 +52,13 @@ block vars
 		var l_gleizer_vocation = "CIO Mediascope"
 		var l_gleizer_speech = "Alpaca and Capybaras"
 		var l_gleizer_details = "How the production of heterogeneous data comes to a single model, and personalization becomes part of analytics"
+		var l_gleizer_video = ""
 
 		var m_zotov = "Mikhail Zotov"
 		var m_zotov_vocation = "Commercial Director Mediascope"
 		var m_zotov_speech = "The Ultimate<br>Question …42!"
 		var m_zotov_details = "How the Mediascope's new technologies help Media to better understand the path, attention and actions of a person"
+		var m_zotov_video = ""
 
 
 		var footer_contacts = "STAY IN TOUCH!"
