Materials without speakers video (public, check GA id)

--- a/src/pug/en/index.pug
+++ b/src/pug/en/index.pug
@@ -20,11 +20,11 @@ block vars
 		
 		var broadcast_info = "Our conference can be viewed on the website here and also on the Youtube channel. You can choose<br>the most convinient option."
 		var broadcast_site = "Conference website"
-		var broadcast_title = "Broadcast video"
+		var broadcast_title = "Conference video"
 		var broadcast_review = "Please rate the speakers"
 		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLSdIx30Q5zMmWtQKHZG55eM1FhRRv0VdDPZkAljXSXpirXSd9A/viewform"
 		var broadcast_tg = "Ask a question in Telegram"
-		var broadcast_video_url = "https://youtu.be/BziojwBgTRw"
+		var broadcast_video_url = "https://youtu.be/SyQKVSCiGDI" /*"https://youtu.be/BziojwBgTRw"*/
 		var broadcast_youtube_url = broadcast_video_url
 
 		var download_pdf = "Download PDF"
@@ -56,7 +56,7 @@ block vars
 
 		var m_zotov = "Mikhail Zotov"
 		var m_zotov_vocation = "Commercial Director Mediascope"
-		var m_zotov_speech = "The Ultimate<br>Question …42!"
+		var m_zotov_speech = "The Ultimate<br><nobr>Question …42!</nobr>"
 		var m_zotov_details = "How the Mediascope's new technologies help Media to better understand the path, attention and actions of a person"
 		var m_zotov_video = ""
 
