--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -20,11 +20,11 @@ block vars
 		
 		var broadcast_info = "Наша трансляция проходит одновременно<br>на нескольких площадках, и вы можете выбрать наиболее удобную для Вас."
 		var broadcast_site = "Сайт конференции"
-		var broadcast_title = "Запись трансляции"
+		var broadcast_title = "Видео конференции"
 		var broadcast_review = "Оценить спикеров"
 		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLScdv6PY9QpsafOz-atbsIqkr21OzdAi-SQ--2DdF6jao0Ad_A/viewform"
 		var broadcast_tg = "Задать вопрос в Telegram"
-		var broadcast_video_url = "https://youtu.be/Kwohz2deZ0I"
+		var broadcast_video_url = "https://youtu.be/SyQKVSCiGDI" /*"https://youtu.be/Kwohz2deZ0I"*/
 		var broadcast_youtube_url = broadcast_video_url
 
 		var download_pdf = "Скачать презентацию в PDF"
